# ActivityWatch

./: CITATION.cff  Makefile  NOTICE.txt  README.md  flatten-submodules.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
aw-client/: pyproject.toml
aw-core/: pyproject.toml
aw-core/aw_core/: models.py
aw-core/tests/: test_datastore.py  test_query2.py
aw-notify/: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  config.example.toml
aw-notify/.github/: FUNDING.yml
aw-notify/.github/workflows/: ci.yml  lint.yml  release.yml
aw-notify/src/: dirs.rs  logging.rs  main.rs
aw-qt/: pyproject.toml
aw-server/: pyproject.toml
aw-server-rust/.cargo/: audit.toml
aw-server-rust/aw-client-rust/: Cargo.toml
aw-server-rust/aw-server/: Cargo.toml
aw-server-rust/aw-webui/: package-lock.json  package.json
aw-server-rust/aw-webui/src/components/: Footer.vue
aw-server/aw-webui/: package-lock.json
aw-server/aw-webui/src/stores/: settings.ts
aw-server/aw-webui/src/util/: tooltip.js
aw-server/aw-webui/src/views/activity/: Activity.vue
aw-server/aw_server/: __about__.py  api.py  rest.py  server.py
aw-server/tests/: test_server.py
aw-tauri/: CONTRIBUTING.md  Makefile  README.md  package.json
aw-tauri/.github/workflows/: build.yml  gptme.yml  lint.yml  release.yml
aw-tauri/aw-webui/: package-lock.json  package.json
aw-tauri/aw-webui/src/: queries.ts
aw-tauri/aw-webui/src/stores/: activity.ts
aw-tauri/aw-webui/src/visualizations/: periodusage.ts  sunburst-clock.ts
aw-tauri/src-tauri/: Cargo.toml  tauri.conf.json
aw-tauri/src-tauri/.cargo/: audit.toml
aw-tauri/src-tauri/src/: lib.rs  main.rs  manager.rs  mini.rs
aw-watcher-afk/: pyproject.toml
aw-watcher-input/: pyproject.toml
aw-watcher-input/visualization/: package-lock.json  package.json
aw-watcher-window/: pyproject.toml
awatcher/: Cargo.toml
awatcher/.cargo/: audit.toml
awatcher/watchers/: Cargo.toml
scripts/: build_changelog.py  update-deps.sh
