[package]
name = "aw-notify-rs"
version = "0.2.0"
edition = "2021"
description = "Desktop notifications for ActivityWatch time tracking data"
authors = ["ActivityWatch Contributors"]
readme = "README.md"
repository = "https://github.com/ActivityWatch/aw-notify-rs"
license = "MPL-2.0"
keywords = ["activitywatch", "time-tracking", "notifications"]
categories = ["gui"]

[[bin]]
name = "aw-notify"
path = "src/main.rs"

[dependencies]
# ActivityWatch client
aw-client-rust = {git = "https://github.com/ActivityWatch/aw-server-rust", branch="master"}
aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }

# Command line interface
clap = { version = "4.0", features = ["derive"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
fern = "0.6"

# Desktop notifications
notify-rust = "4.10"

# Global state management
once_cell = "1.17"

# JSON handling and configuration serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# System hostname
hostname = "0.3"

# Configuration directory detection
dirs = "5.0"

# Signal handling for graceful shutdown
ctrlc = "3.4"
crossbeam-channel = "0.5"
dashmap = "6.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
